Added sample for Toasts.Forms.Plugin but doesn't work

--- a/Dialogs/Dialogs/MainPage.xaml
+++ b/Dialogs/Dialogs/MainPage.xaml
@@ -9,6 +9,8 @@
                 Clicked="ShowDisplayAlert" />
         <Button Text="ActionSheet"
                 Clicked="ShowActionSheet" />
+        <Button Text="Toasts.Forms.Plugin"
+                Clicked="ShowToastsFormsPlugin"/>
     </StackLayout>
 
 </ContentPage>
