--- a/Dialogs/Dialogs/MainPage.xaml
+++ b/Dialogs/Dialogs/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Dialogs"
-             x:Class="Dialogs.MainPage">
+             x:Class="Dialogs.MainPage"
+             Title="User Dialogs">
 
     <StackLayout>
         <Button Text="DisplayAlert"
@@ -11,6 +12,8 @@
                 Clicked="ShowActionSheet" />
         <Button Text="Toasts.Forms.Plugin"
                 Clicked="ShowToastsFormsPlugin"/>
+        <Button Text="Rg.Plugins.Popup"
+                Clicked="ShowRgPluginsPopup"/>
     </StackLayout>
 
 </ContentPage>
